# joyride-ros-main

./: .gitattributes  .gitignore  .gitmodules  CurveFitParams_center.csv  CurveFitParams_left.csv  CurveFitParams_right.csv  Default.perspective  README.md  Test.perspective  can.sh  can_bringup.sh  check_connected_devices.sh  gui.sh  rosLogStuff.txt  test_xyz_data.csv
src/joyride/: CMakeLists.txt  package.xml
src/joyride_bringup/: CMakeLists.txt  package.xml
src/joyride_bringup/config/: SLAM_config.yaml  booboo_params.yaml  diagnostic_minimal.yaml  lidar_config.yaml  mppi_config.yaml  nav2_config.yaml  nav2_minimal_params.yaml  nav2_navigation_params.yaml  nav2_navigation_params_fake.yaml  nav2_params.yaml  nav_pp_clean.yaml  obstacle_config.yaml  purepursuit_config.yaml  simple_go_to_pose_config.yaml  teb_config.yaml
src/joyride_bringup/install/: local_setup.sh  setup.ps1  setup.sh
src/joyride_bringup/install/joyride_bringup/share/joyride_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/joyride_bringup/install/joyride_bringup/share/joyride_bringup/config/: lidar_config.yaml  mppi_config.yaml  nav2_params.yaml  teb_config.yaml  (+1 more)
src/joyride_bringup/launch/: CAN.launch.py  PC2LS_launch.py  fake_joy_test.launch.py  gps_localization.launch.py  gui.launch.py  joyride_JJJT_test.launch.py  joyride_JJJT_test.py  joyride_SLAM_launch.py  joyride_diagnostics.launch.py  joyride_gps_localization.launch.py  joyride_joystick_control.launch.py  joyride_joystick_control_fake.launch.py  joyride_joystick_control_sensors.launch.py  joyride_lidar2D.launch.py  joyride_lifecycle_sensors.launch.py  joyride_min.launch.py  joyride_minimal.launch.py  joyride_minimal_fake.launch.py  joyride_mppi.launch.py  joyride_nav_pp_clean.launch.py  joyride_navigation.launch.py  joyride_navsat_transform.launch.py  joyride_navstack.launch.py  joyride_octomap_launch.py  joyride_perception.launch.py  joyride_purepursuit.launch.py  joyride_sensors.launch.py  joyride_simple_go_to_pose.launch.py  joyride_transforms.launch.py  joystick.launch.py  joystick_full.launch.py  lidar2D.launch.py  lifecycle_navigation.launch.py  lifecycle_sensors.launch.py  localization.launch.py  navigation.launch.py  navsat_transform.launch.py  navstack.launch.py  octomap_launch.py  octomap_mapping.launch  (+4 more)
src/joyride_bringup/launch/install/: _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.sh  setup.sh  setup.zsh
src/joyride_bringup/launch/log/: latest_build
src/joyride_bringup/log/: latest_build
src/joyride_bringup/maps/: empty_map.yaml
src/joyride_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/joyride_control/include/joyride_control/: joyride_velocity_preprocessor.hpp
src/joyride_control/joyride_control/: vel_preprocessor.py
src/joyride_control/src/: joyride_velocity_preprocessor.cpp  joyride_velocity_preprocessor_node.cpp
src/joyride_control_py/: package.xml  setup.cfg  setup.py
src/joyride_control_py/joyride_control_py/: simple_go_to_pose.py  vel_preprocessor.py
src/joyride_control_py/test/: test_flake8.py
src/joyride_interfaces/: CMakeLists.txt  package.xml
src/joyride_interfaces/action/: RequestAudioVisual.action  RequestEnableDisable.action
src/joyride_interfaces/msg/: AccessoriesGEMFeedback.msg  DriveByWireSystemInfo.msg  EPSPositionVelocityFeedback.msg  Health.msg  Heartbeat.msg  SystemDiagnosticSummary.msg  SystemHealth.msg  TorqueEPSFeedback.msg  VelocityState.msg
src/joyride_interfaces/srv/: GetOdomOriginLL.srv  RequestAutoEnableDisable.srv
src/joyride_localization/: CMakeLists.txt  package.xml
src/joyride_localization/config/: nav_localization_config.yaml  vectornav_gps_imu.yaml
src/joyride_localization/include/joyride_localization/: joyride_fake_odom.hpp  joyride_navsat_odom.hpp
src/joyride_localization/src/: joyride_ackermann_odom.cpp  joyride_fake_odom.cpp  joyride_fake_odomTF.cpp  joyride_fake_odom_node.cpp  joyride_navsat_fake_odom.cpp  joyride_navsat_odom.cpp  joyride_navsat_odom_node.cpp
src/joyride_perception/: package.xml  setup.cfg  setup.py
src/joyride_perception/config/: obstacle_config.yaml  uv_to_xyz_projection.yaml
src/joyride_perception/joyride_perception/: Bfly_LDC.py  blob_detector.py  calibration.csv  calibration_center.csv  calibration_center_tm.csv  camera_transform_calibrator.py  grid_camera.py  lane_detector.py  lane_detector_2.py  obstacle_detector.py  orange_detector.py  pc2_to_Laerscan  pinhole_test.py  traffic_sign_detector.py  uv_and_xyz_scatterplotter.py  uv_n_xyz_scatterplotter.py  uv_to_pointcloud.py  uv_to_pointcloud_test.py
src/joyride_perception/joyride_perception/submodules/: lane.py  object_classifier_yolo.py  vision_utility.py
src/joyride_perception_cpp/: CMakeLists.txt  package.xml
src/joyride_perception_cpp/include/joyride_perception_cpp/: lane_helperFunctions.h  lane_mainFunctions.h  pothole_functions.h  slider.h
src/joyride_perception_cpp/src/: lane_roi_set.cpp  lane_slider_node.cpp  white_detection_node.cpp
src/joyride_servers/: package.xml  setup.cfg  setup.py
src/joyride_servers/config/: automode_manager_standard.yaml  computer_monitor_standard.yaml  diagnostics_standard.yaml  transforms.yaml
src/joyride_servers/joyride_servers/: automode_manager.py  computer_monitor.py  computer_status_monitor.py  dbw_usb_link_node.py  joyride_static_tf_broadcaster.py  serial_link.py
src/joyride_servers/launch/: automode_manager.launch.py  computer_monitor.launch.py
src/old/joyride_steering/: CMakeLists.txt  package.xml
src/old/joyride_steering/include/joyride_steering/: steering_pid.hpp
src/old/joyride_steering/src/: steering_pid.cpp
src/sensors/blackfly_camera_driver/: package.xml  setup.cfg  setup.py
src/sensors/blackfly_camera_driver/blackfly_camera_driver/: blackfly_camera_driver.py
src/sensors/blackfly_camera_driver/config/: bfly_lifecycle_config.yaml  bfly_no_lifecycle_config.yaml
src/sensors/blackfly_camera_driver/launch/: bfly_center_lifecycle.launch.py  bfly_lifecycle.launch.py  bfly_no_lifecycle.launch.py
(+315 files in other folders)
