<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joyride_control</name>
  <version>1.0.0</version>
  <description>Actuator control nodes for Joyride self-driving vehicle.</description>
  <maintainer email="joyride-obc@todo.todo">Max DeSantis</maintainer>
  <license>LGPL</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>joyride_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
