<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joyride_control</name>
  <version>1.0.0</version>
  <description>Control nodes for Joyride self-driving car</description>
  <maintainer email="max.desantis@okstate.edu">Max DeSantis</maintainer>
  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>joyride_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
