<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joyride_control_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="max.desantis@okstate.edu">joyride-obc</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>joyride_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
