<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blackfly_camera_driver</name>
  <version>1.0.0</version>
  <description>Blackfly GIGE Camera driver for Joyride Self-Driving Vehicle</description>
  <maintainer email="max.desantis@okstate.edu">Max DeSantis</maintainer>
  <license>LGPL</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joyride_interfaces</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
